--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,6 +45,26 @@ body{
     background-color: #e2e3e5;
 }
 
+.searchBarCustom{
+    align-self: end;
+    margin-left: 305px;
+}
+
+.toggleIconCustom{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.7)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.searchBtnCustom{
+    background-color: #fff;
+    transition: 0.3s;
+}
+
+.searchBtnCustom:hover{
+    background-color: red;
+    color: white; 
+    transition: 0.3s;
+}
+
 
 
 
