--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -50,8 +50,8 @@ body{
 }
 
 .titleCustom {
-    margin-top: auto; /* Centro verticale */
-    margin-bottom: auto; /* Centro verticale */
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .ddMenuCustom{
@@ -87,12 +87,12 @@ body{
 .card-footer {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Allinea gli elementi all'inizio (sinistra) */
-    flex-wrap: nowrap; /* Assicura che gli elementi non si avvolgano su più righe */
+    align-items: flex-start;
+    flex-wrap: nowrap;
 }
 
 .tagsBottom {
-    margin-top: auto;  /* Spinge i tag verso il basso */
+    margin-top: auto;
     font-weight: 600;
     font-size: 16px;
 }
@@ -134,6 +134,16 @@ body{
 .btn-danger:hover {
     background-color: #c82333;
     transform: scale(1.05);
+}
+
+.custom-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.custom-col {
+    margin-bottom: 1.5rem;
 }
 
 
