--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,6 +31,7 @@ body {
 }
 
 .linkCustom {
+    font-size: 24px;
     transition: color 0.35s, transform 0.35s;
     padding: 0px 5px;
 }
@@ -216,6 +217,7 @@ body {
 
 .navbar {
     width: 100%;
+    height: 60px;
     margin: 0;
     padding: 5px 10px;
     box-sizing: border-box;
